BrushUp: improve menu, context menu, menu bar, combo menu, button
Improve menubar and menus
- The menus now have a padding and hover effect.
- The menu bar cannot have a margin/padding anymore, the first and last
  menu entries need to have the margin
- The rules for a menu are moved to Menu.less so that a menu can easier
  be used outside of a menu bar. This also makes the rules less
  complicated.
- Menus and buttons now use flex box to layout the content -> vertical
  align helper and other hacks can be removed.
- The style for the font icons are removed, they were not needed but
  made overriding more complex.
- Renamed .menubox to .menubar-box because it belongs to the
  MenubarBox.js and not to MenuBox.js
- The selected state of menus and buttons is now correctly visualized.

Improve focus style
- The focus style for menus and buttons is updated and simplified.
- No pseudo element is necessary anymore.

Harmonize buttons and menus
- Rename class default-menu to default
- A menu button now uses the same style as a regular button, no
  duplicated rules anymore

Simplify ButtonField
- The additional div is not necessary anymore because of the more simple
  focus state.
- The additional rules are not necessary anymore

Add borderless style to Button.js
- The existing link style cannot use paddings because it would break
  a lot of alignments. The new style looks like a menu in the menu bar.

Improve context menu
- The context menu now uses a modern style.
- The old code could not handle the rounded corners well -> refactored
  context menu animations.
- The paddings are now animated.
- If an image is loaded during animation the size of the popup is now
  adjusted.

Improve combo menu
- Added a separator to make it not look the same as a menu with
  sub menus
- The combo menu now supports the button and default menu style
- A regular menu now shows the sub menu icon even if there is no text
  and icon which makes it easier to use it in a combo menu

Improve form fi

--- a/eclipse-scout-core/src/desktop/DesktopDense.less
+++ b/eclipse-scout-core/src/desktop/DesktopDense.less
@@ -48,15 +48,14 @@
 
   /* MenuBar.less */
 
-  .menubar {
-    & > .menubox {
+  .menubar:not(.main-menubar) {
+    & > .menubar-box {
       & > .menu-item {
         padding-top: 3px; /* @menubar-item-padding-y; */
         padding-bottom: 3px; /* @menubar-item-padding-y; */
 
         /* By making sure menu items are always at least the same height as form fields, it is easier to align them with each other, especially when zoomed */
         min-height: @logical-grid-row-height-dense; /* @logical-grid-row-height; */
-
       }
     }
   }
