--- a/eclipse-scout-core/src/desktop/bench/DesktopBench.less
+++ b/eclipse-scout-core/src/desktop/bench/DesktopBench.less
@@ -112,11 +112,10 @@
     }
 
     & > .menubar-container {
-      padding-left: 6px;
-      padding-right: @detail-table-header-menubar-padding-right;
 
-      & > .menubar > .menubox > .menu-item {
+      & > .menubar > .menubar-box > .menu-item {
         margin-right: 12px;
+        border-radius: @border-radius;
       }
     }
   }
