--- a/eclipse-scout-core/src/form/fields/wrappedform/WrappedFormField.less
+++ b/eclipse-scout-core/src/form/fields/wrappedform/WrappedFormField.less
@@ -36,8 +36,16 @@
 
   & > .root-group-box > .menubar {
     margin-left: @mandatory-indicator-width;
-    margin-right: 0;
-    padding-left: 0;
     #scout.menubar-background-color-inherit;
+
+    & > .menubar-box > .menu-item {
+      &.first {
+        margin-left: 0;
+      }
+
+      &.last {
+        margin-right: 0;
+      }
+    }
   }
 }
