--- a/eclipse-scout-core/src/index.less
+++ b/eclipse-scout-core/src/index.less
@@ -88,8 +88,9 @@
 @import "image/Image";
 @import "keystroke/keybox";
 @import "layout/logicalgrid/LogicalGridLayout";
-@import "menu/ContextMenuPopup";
 @import "menu/Menu";
+@import "menu/ContextMenuPopup";
+@import "menu/ComboMenu";
 @import "menu/form/field/FormFieldMenu";
 @import "menu/menubar/MenuBar";
 @import "menu/menubar/MenuBarPopup";
