--- a/eclipse-scout-core/src/planner/PlannerHeader.less
+++ b/eclipse-scout-core/src/planner/PlannerHeader.less
@@ -127,9 +127,9 @@
   }
 
   &.disabled {
-    background-color: @menubar-button-disabled-background-color;
-    border-color: @menubar-button-disabled-border-color;
-    color: @menubar-button-disabled-color;
+    background-color: @button-disabled-background-color;
+    border-color: @button-disabled-border-color;
+    color: @button-disabled-color;
     cursor: default;
   }
 }
