--- a/eclipse-scout-core/src/popup/Popup.less
+++ b/eclipse-scout-core/src/popup/Popup.less
@@ -20,6 +20,10 @@
     min-width: @tooltip-arrow-size;
     min-height: @tooltip-arrow-size;
   }
+
+  &.before-animate-open {
+    .invisible();
+  }
 }
 
 .popup-arrow {
