--- a/eclipse-scout-core/src/tile/fields/tablefield/TileTableField.less
+++ b/eclipse-scout-core/src/tile/fields/tablefield/TileTableField.less
@@ -135,7 +135,7 @@
       }
     }
 
-    & > .menubar > .menubox > .menu-item {
+    & > .menubar > .menubar-box > .menu-item {
       color: @tile-default-inverted-color;
     }
   }
@@ -172,7 +172,7 @@
       }
     }
 
-    & > .menubar > .menubox > .menu-item {
+    & > .menubar > .menubar-box > .menu-item {
       color: @tile-alternative-inverted-color;
     }
   }
