--- a/eclipse-scout-core/src/table/TableHeader.less
+++ b/eclipse-scout-core/src/table/TableHeader.less
@@ -29,8 +29,6 @@
   /* make menubar a little smaller than header (but still center it). Otherwise browsers may draw the menu bar over the bottom border of the table header when the page is zoomed */
   top: 1px;
   height: calc(~'100% - 2px');
-  padding-right: 6px;
-  padding-left: 6px;
   /* Do not use transparent color here, because otherwise header items would be visible behind */
   background-color: inherit;
   z-index: 1;
@@ -39,6 +37,10 @@
     height: 100%;
     background-color: transparent;
     border: none;
+
+    & > .menubar-box > .menu-item {
+      border-radius: 0;
+    }
   }
 }
 
